--- a/ITF-WEB-PRO-2/index.html
+++ b/ITF-WEB-PRO-2/index.html
@@ -10,7 +10,7 @@
             document.getElementById("myusername").innerHTML = document.getElementById("username").value + "'s Gallery"
         }
         function setImage(){
-            document.getElementsById("profileimg").style.backgroundImage = "url(" + document.getElementById("image_url").value + ")";
+            document.getElementById("profileimg").style.backgroundImage = "url(" + document.getElementById("image_url").value + ")";
         }
     </script>
 </head>
@@ -34,18 +34,18 @@
             </div>
         </div>
         <div class="gallery">
-            <div class="gallery-item" style="grid-column: span 2 / span 2;"></div>
-            <div class="gallery-item"></div> 
-            <div class="gallery-item"></div>
-            <div class="gallery-item"></div>
-            <div class="gallery-item"></div>
-            <div class="gallery-item"></div>
-            <div class="gallery-item" style="grid-row: span 2 / span 2;"></div>
-            <div class="gallery-item"></div>
-            <div class="gallery-item"></div>
-            <div class="gallery-item"></div>
-            <div class="gallery-item"></div>
-            <div class="gallery-item"></div>
+            <div class="gallery-item" style="grid-column: span 2 / span 2;" style="background-image: url(120.png);"></div>
+            <div class="gallery-item" style="background-image: url(beast.jpg);"></div> 
+            <div class="gallery-item" style="background-image: url(110.jpg);"></div>
+            <div class="gallery-item" style="background-image: url(111.jpg);"></div>
+            <div class="gallery-item" style="background-image: url(112.png);"></div>
+            <div class="gallery-item" style="background-image: url(113.jpg);"></div>
+            <div class="gallery-item" style="grid-row: span 2 / span 2;" style="background-image: url(119.jpg);"></div>
+            <div class="gallery-item" style="background-image: url(114.jpg);"></div>
+            <div class="gallery-item" style="background-image: url(115.jpg);"></div>
+            <div class="gallery-item" style="background-image: url(116.avif);"></div>
+            <div class="gallery-item" style="background-image: url(117.jpg);"></div>
+            <div class="gallery-item" style="background-image: url(118.jpg);"></div>
         </div>
     </div>
 </body>
