--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div class="content">
         <div class="flex-top">
             <div class="flex-item-1">
-                <!--Avatar-->s
+                <!--Avatar-->
                 <div class="avatar" id="profileimg"></div>
                 <div class="noti"><p>2</p></div>
             </div>
